tests/fixtures/invalid/array_length_non_constant_identifier.c
int main(void) {
    int n = 3;
    int values[n];
    return 0;
}
